Fix big spacing

--- a/src/app/features/user/leasing-history/components/leasings-table/leasings-table.component.less
+++ b/src/app/features/user/leasing-history/components/leasings-table/leasings-table.component.less
@@ -3,11 +3,7 @@
 .leasings-table {
   overflow-x: auto;
   width: calc(100vw - @sidebar-width - 6rem);
-  margin: 3rem;
-  //   .table {
-  //     min-width: 80rem;
-
-  //   }
+  margin: 0 3rem;
 }
 .leasing-lessor {
   display: flex;
