--- a/src/app/features/user/leasing-history/containers/leasing-history/leasing-history.component.less
+++ b/src/app/features/user/leasing-history/containers/leasing-history/leasing-history.component.less
@@ -20,6 +20,7 @@
     width: calc(100vw - @sidebar-width - 6rem);
     overflow-x: auto;
     display: flex;
+    margin-bottom: 3rem;
 
     & > ile-lease-product-display {
       margin-right: 2rem;
